<?xml version="1.0" encoding="UTF-8"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<!-- This module was also published with a richer model, Gradle metadata, -->
	<!-- which should be used instead. Do not delete the following line which -->
	<!-- is to indicate to Gradle or any Gradle module metadata file consumer -->
	<!-- that they should prefer consuming it instead. -->
	<!-- do_not_remove: published-with-gradle-metadata -->
	<modelVersion>4.0.0</modelVersion>
	<groupId>solomonoff</groupId>
	<artifactId>solomonoff</artifactId>
	<version>1.4</version>
	<properties>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
	</properties>
	<name>SolomonoffLib</name>
	<description>Transducer regular expression compiler</description>
	<developers>
		<developer>
			<id>aleksanderm</id>
			<name>Aleksander Mendoza</name>
			<email>aleksander.mendoza.drosik@gmail.com</email>
		</developer>
	</developers>
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>5.4.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>antlr4-runtime</artifactId>
			<version>4.7.1</version>
		</dependency>
		<dependency>
			<groupId>net.automatalib.distribution</groupId>
			<artifactId>automata-distribution</artifactId>
			<version>0.9.0</version>
			<type>pom</type>
		</dependency>
		<dependency>
			<groupId>de.learnlib.distribution</groupId>
			<artifactId>learnlib-distribution</artifactId>
			<version>0.15.0</version>
			<type>pom</type>
		</dependency>
		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>antlr4</artifactId>
			<version>4.7.1</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<archive>
						<manifest>
							<mainClass>net.alagris.CLI</mainClass>
						</manifest>
					</archive>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M5</version>
			</plugin>
			<plugin>
				<groupId>org.antlr</groupId>
				<artifactId>antlr4-maven-plugin</artifactId>
				<version>4.7.1</version>
				<executions>
					<execution>
						<id>antlr</id>
						<goals>
							<goal>antlr4</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>